[gd_scene load_steps=6 format=3 uid="uid://u83r7qsgdekg"]

[ext_resource type="Script" path="res://UI/settings.gd" id="1_lqaj2"]
[ext_resource type="PackedScene" uid="uid://cvw4ajho6rrms" path="res://UI/sky_background.tscn" id="3_51067"]
[ext_resource type="Texture2D" uid="uid://exr6mjjlvfrg" path="res://UI/backbutton.png" id="3_fqm84"]
[ext_resource type="FontFile" uid="uid://jl34hxvwvjwv" path="res://kenney_mini_square.ttf" id="4_u54qd"]
[ext_resource type="Script" path="res://UI/AudioSettings.gd" id="5_m6537"]

[node name="Settings" type="Node2D"]
script = ExtResource("1_lqaj2")

[node name="BackButtonSettings" type="TextureButton" parent="."]
offset_left = -3.0
offset_top = 2.0
offset_right = 77.0
offset_bottom = 82.0
texture_normal = ExtResource("3_fqm84")

[node name="SkyBackground" parent="." instance=ExtResource("3_51067")]

[node name="SettingsTitle" type="Label" parent="."]
offset_left = 128.0
offset_top = 8.0
offset_right = 568.0
offset_bottom = 133.0
theme_override_colors/font_color = Color(0.568627, 0, 0.956863, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("4_u54qd")
theme_override_font_sizes/font_size = 100
text = "Settings"

[node name="SoundVolume" type="Label" parent="."]
offset_left = 232.0
offset_top = 232.0
offset_right = 426.0
offset_bottom = 295.0
theme_override_colors/font_color = Color(0.568627, 0, 0.956863, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("4_u54qd")
theme_override_font_sizes/font_size = 50
text = "Volume"

[node name="AudioSettings" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_m6537")

[node name="Music" type="Label" parent="AudioSettings"]
layout_mode = 2
offset_left = 24.0
offset_top = 352.0
offset_right = 654.0
offset_bottom = 390.0
theme_override_colors/font_color = Color(0.568627, 0, 0.956863, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("4_u54qd")
theme_override_font_sizes/font_size = 30
text = "MUSIC"

[node name="MusicSlider" type="HSlider" parent="AudioSettings"]
layout_mode = 2
offset_left = 328.0
offset_top = 360.0
offset_right = 616.0
offset_bottom = 376.0
max_value = 1.0
step = 0.05

[node name="SFX" type="Label" parent="AudioSettings"]
layout_mode = 2
offset_left = 24.0
offset_top = 488.0
offset_right = 654.0
offset_bottom = 526.0
theme_override_colors/font_color = Color(0.568627, 0, 0.956863, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("4_u54qd")
theme_override_font_sizes/font_size = 30
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="AudioSettings"]
layout_mode = 2
offset_left = 320.0
offset_top = 504.0
offset_right = 616.0
offset_bottom = 520.0
max_value = 1.0
step = 0.05

[node name="Apply" type="Button" parent="AudioSettings"]
layout_mode = 0
offset_left = 552.0
offset_top = 1080.0
offset_right = 620.0
offset_bottom = 1120.0
theme_override_fonts/font = ExtResource("4_u54qd")
theme_override_font_sizes/font_size = 20
text = "Apply"

[connection signal="pressed" from="BackButtonSettings" to="." method="_on_back_button_settings_pressed"]
[connection signal="mouse_exited" from="AudioSettings/MusicSlider" to="AudioSettings" method="_on_music_slider_mouse_exited"]
[connection signal="mouse_exited" from="AudioSettings/SFXSlider" to="AudioSettings" method="_on_sfx_slider_mouse_exited"]
[connection signal="pressed" from="AudioSettings/Apply" to="." method="_on_apply_pressed"]
